--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.naman14.timber">
+    package="com.example.humungus.playpal">
 
     <uses-sdk tools:overrideLibrary="de.Maxr1998.trackselectorlib" />
 
