--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,31 +19,15 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:26.1.0'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:palette-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:percent:26.1.0'
-
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
-    compile 'net.steamcrafted:materialiconlib:1.0.3'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
-    compile 'com.squareup.okhttp:okhttp:2.3.0'
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'de.Maxr1998:track-selector-lib:1.1'
-
-    compile('com.github.afollestad.material-dialogs:core:0.8.5.3@aar') {
-        transitive = true
-    }
-    compile('com.github.naman14:app-theme-engine:0.5.1@aar') {
-        transitive = true
-    }
-    compile('com.github.afollestad.material-dialogs:commons:0.8.5.3@aar') {
-        transitive = true
-    }
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.airbnb.android:lottie:2.5.0-rc1'
 }
